--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,8 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/IndoorscapeAlbumPlugin.jar')
+    compile files('libs/httpmime-4.1.2.jar')
 }
