--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,6 +17,15 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -26,7 +37,9 @@
             android:authorities="com.myproject.cp.DatabaseProvider">
 
         </provider>
-
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="XvQztDuUUROqxa0A00dVQBKL" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name">
@@ -94,6 +107,15 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.AtyTestHttp"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.AtyNetworkTest"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.AtyLocationTest"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.AtyBaiduMap"
             android:screenOrientation="portrait" />
         <service android:name=".server.MyService" />
         <service android:name=".server.MyIntentService" />
